--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 8000
-OPENAI_API_KEY = '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'
+OPENAI_API_KEY = "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"
+OPENAI_API_KEY_TWO = "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"
