changed openai api key

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8000
 OPENAI_API_KEY = "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"
 OPENAI_API_KEY_TWO = "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"
+OPENAI_API_KEY_THREE = "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"
